--- a/assets/css/style copy.css
+++ b/assets/css/style copy.css
@@ -1,46 +1,3 @@
-ul.side-nav {
-  width: 190px;
-}
-
-ul.side-nav li {
-  padding: 0;
-}
-
-ul.side-nav.fixed a {
-  box-sizing: content-box;
-  color: rgb(16, 202, 56);
-  display: block;
-  line-height: 100%;
-  padding: 10px 0 12px;
-}
-
-ul.table-of-contents li.logo a.active, ul.table-of-contents li.logo a:hover {
-  border: none;
-  font-weight: 200;
-}
-
-ul.side-nav.fixed li.logo {
-  background-color: #fafafa;
-  border-bottom: 1px solid #ddd;
-  box-sizing: content-box;
-  min-height: 90px;
-  padding: 30px 30px 40px;
-}
-
-ul.side-nav.fixed li.logo a {
-  font-weight: 200;
-  line-height: 100%;
-}
-
-ul.table-of-contents li:not(.logo) a.active, ul.table-of-contents li:not(.logo) a:hover {
-  background-color: #fafafa;
-  border-left: 3px solid;
-}
-
-ul.side-nav.fixed.table-of-contents li:not(.logo) a span, ul#slide-out li:not(.logo) a span {
-  color: #333 !important;
-}
-
 .profile-pic {
   position: relative;
   max-width:130px;
@@ -48,9 +5,13 @@ ul.side-nav.fixed.table-of-contents li:not(.logo) a span, ul#slide-out li:not(.l
   width: auto;
   height: auto;
   overflow: hidden;
+  /* display: inline-block; */
+  
+  
+  /* background-size: cover;  */
   margin: -31px; 
   margin-left:-7px;
-  border: 3px solid rgba(9, 97, 185, 0.4); 
+  border: 6px solid rgba(0, 77, 64, 0.4); 
   border-radius: 50% !important;
 }
 
@@ -124,7 +85,7 @@ ul.side-nav.fixed.table-of-contents li:not(.logo) a span, ul#slide-out li:not(.l
   position: relative;
   padding: 11px 35px;
   background: #fff;
-  color: #067091;
+  color: #00796b;
   border: 2px solid #fff;
   font-weight: 600;
   font-size: 15px;
@@ -133,6 +94,11 @@ ul.side-nav.fixed.table-of-contents li:not(.logo) a span, ul#slide-out li:not(.l
   border-radius: 5px;
   -webkit-border-radius: 5px;
 }
+
+/* .readme:hover{
+  color: white;
+  background-color: #00796b;
+} */
 
 .contactme {
   position: relative;
@@ -150,7 +116,7 @@ ul.side-nav.fixed.table-of-contents li:not(.logo) a span, ul#slide-out li:not(.l
 }
 
 .contactme:hover{
-  color: #067091;
+  color: #00796b;
   background-color: white;
 }
 /* main body */
@@ -160,12 +126,24 @@ ul.side-nav.fixed.table-of-contents li:not(.logo) a span, ul#slide-out li:not(.l
 body {
   color: #333;
   font-size: 18px;
-  font-family: Arial, Helvetica, sans-serif,;
 }
 
+/* body {
+  color: black;
+  font-size: 18px;
+} */
+
+/* main a -- links */
+
+/* a {
+  color: #009688;
+} */
+
 a {
-  color: #001c4d;
+  color: #004d40;
 }
+
+/* main blockqoute */
 
 /* blockquote {
   border-left: 5px solid #795548;
@@ -176,14 +154,23 @@ a {
   padding-left: 1.5rem;
 } */
 
-/* blockquote * {
+blockquote {
+  border-left: 5px solid #795548;
+  color: #795548;
+  font-size: 125%;
+  font-weight: 400;
+  margin: 20px 0;
+  padding-left: 1.5rem;
+}
+
+blockquote * {
   font-size: inherit;
   line-height: inherit;
-} */
+}
 
-/* .text-center {
+.text-center {
   text-align: center;
-} */
+}
 
 /* main nav */
 
@@ -193,6 +180,12 @@ nav {
   height: 0;
 }
 
+/* nav {
+  background: rgb(149, 126, 212);
+  box-shadow: none;
+  height: 0;
+} */
+
 nav i {
   padding: 0 15px;
   position: relative;
@@ -200,6 +193,11 @@ nav i {
 }
 
 /* main */
+
+/* main {
+  background: url(../../assets/img/bg.png) repeat;
+  padding-left: 190px;
+} */
 
 main {
   background: url(../../assets/img/bg.png) repeat;
@@ -221,7 +219,64 @@ dt {
   margin-left: 0.5rem;
 }
 
+ul.side-nav {
+  width: 190px;
+}
 
+ul.side-nav li {
+  padding: 0;
+}
+
+/* ul.side-nav.fixed a {
+  box-sizing: content-box;
+  color: rgb(48, 122, 207);
+  display: block;
+  line-height: 100%;
+  padding: 10px 0 12px;
+} */
+
+ul.side-nav.fixed a {
+  box-sizing: content-box;
+  color: rgb(16, 202, 56);
+  display: block;
+  line-height: 100%;
+  padding: 10px 0 12px;
+}
+
+ul.table-of-contents li.logo a.active, ul.table-of-contents li.logo a:hover {
+  border: none;
+  font-weight: 200;
+}
+
+/* ul.side-nav.fixed li.logo {
+  background-color: #fafafa;
+  border-bottom: 1px solid #ddd;
+  box-sizing: content-box;
+  min-height: 90px;
+  padding: 30px 30px 40px;
+} */
+
+ul.side-nav.fixed li.logo {
+  background-color: #fafafa;
+  border-bottom: 1px solid #ddd;
+  box-sizing: content-box;
+  min-height: 90px;
+  padding: 30px 30px 40px;
+}
+
+ul.side-nav.fixed li.logo a {
+  font-weight: 200;
+  line-height: 100%;
+}
+
+ul.table-of-contents li:not(.logo) a.active, ul.table-of-contents li:not(.logo) a:hover {
+  background-color: #fafafa;
+  border-left: 3px solid;
+}
+
+ul.side-nav.fixed.table-of-contents li:not(.logo) a span, ul#slide-out li:not(.logo) a span {
+  color: #333 !important;
+}
 
 li.logo span {
   display: block;
@@ -257,10 +312,15 @@ h3 {
   height: 100vh;
 }
 
+/* Original */
+
+/* #intro.section {
+  background: url(../../assets/img/white-ai-wallpaper.jpg) no-repeat top center/cover;
+  position: relative;
+} */
+
 #intro.section {
-  /* background: #82cdfc repeat; */
-  /*그라데이션으로 변경*/
-  background-image: linear-gradient(rgb(0, 62, 162),rgb(128, 222, 205));
+  background: #a7ffeb repeat;
   position: relative;
 }
 
@@ -272,9 +332,18 @@ h3 {
   top: 0;
 }
 
-#intro.section .container *:not(span,h1) {
+/* #intro.section .container *:not(span) {
   font-weight: 300;
   line-height: 150%;
+  padding: 0 30px;
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+} */
+
+#intro.section .container *:not(span) {
+  font-weight: 300;
+  /* font-weight: 400; */
+  line-height: 150%;
+  /* padding: 0 0px; */
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
@@ -284,25 +353,6 @@ h3 {
 
 #intro.section .teal {
   padding: 0 10px;
-}
-
-#intro .greeting{
-  padding-bottom: 15%;
-  line-height: 120%;
-}
-
-#intro .greeting span{
-  font-weight: 500;
-  color:#ffab40;
-}
-
-#intro h5{
-  color:#787d66;
-}
-
-#intro .typing{
-  font-weight: 300;
-  color:#ffab40;
 }
 
 .overlay {
@@ -326,7 +376,7 @@ h3 {
 
 .card .role {
   font-size: 1.25rem;
-  position: relative;
+  position: absolute;
   right: 38px;
   top: 35px;
 }
@@ -364,7 +414,7 @@ h3 {
 }
 
 #experience .card-action {
-  /* background-color: rgba(0, 0, 0, 0.02); */
+  background-color: rgba(0, 0, 0, 0.02);
   border: none;
 }
 
@@ -372,9 +422,9 @@ h3 {
   display: block;
 }
 
-/* #experience .card .col.s12.m2 a img {
+#experience .card .col.s12.m2 a img {
   max-height: 60px;
-} */
+}
 
 .card-action span {
   font-size: 85%;
@@ -416,8 +466,14 @@ a.hoverline {
   -webkit-transition: 0.25s all;
 }
 
+/* main a.hoverline */
+
+/* a.hoverline:hover {
+  border-bottom: 3px solid #24305e !important;
+} */
+
 a.hoverline:hover {
-  border-bottom: 3px solid #001e4d !important;
+  border-bottom: 3px solid #004d40 !important;
 }
 
 #skills .card.large {
@@ -448,6 +504,10 @@ a.hoverline:hover {
 #experience .card-content .row {
   border-bottom: 1px solid #ddd;
   padding-bottom: 10px;
+}
+
+.card.large .card-image {
+  height: 230px;
 }
 
 .card.large .card-content {
@@ -489,98 +549,28 @@ small {
 /* main .teal-text */
 
 .teal-text {
-  color: #067091 !important;
+  color: #008073 !important;
 }
 
+/* .teal-text {
+  color: #0b5e86 !important;
+} */
+
+/* .teal */
+
 .teal {
-  background-color: #073e71 !important;
-  color: #ffab40;
+  background-color: #008073 !important;
 }
 
 /* .teal {
   background-color: #00695c !important;
 } */
 
-#education .row {
-  border-bottom: 1px solid #ddd;
-  padding-bottom: 10px;
-}
-
-#about{
-  margin-bottom: 25%;
-}
-
-
-/* 전체 항목 컨테이너 스타일 */
-.resume-item {
-    margin-bottom: 30px; /* 항목 간 간격 */
-    padding: 15px 0;
-    padding-left: 15px;
-}
-
-/* 1. 타이틀 (Title) 스타일 */
-.item-title {
-    font-size: 1.2em; /* 글자 크기 크게 */
-    color: #333;
-    margin-top: 0;
-    margin-bottom: 5px;
-    font-weight: 600; /* 굵게 */
-}
-
-/* 2. 소타이틀 (Subtitle) 스타일 */
-.item-subtitle {
-    font-size: 1em;
-    color: #666; /* 타이틀보다 연한 색 */
-    margin-bottom: 10px;
-}
-
-.item-subtitle .period {
-    font-style: italic; /* 기간은 기울임꼴 */
-    margin-left: 10px;
-}
-
-.item-subtitle .item-list {
-    padding-bottom: 5px;
-    line-height: 8%;
-}
-
-/* 3. 상세 내용 (UL List) 스타일 */
-.item-details {
-    margin-left: 20px;
-    padding-left: 0;
-    color: #444;
-}
-.item-details li {
-  line-height: 1.5; /* 가독성을 위한 충분한 행간 */
-  list-style-type: disc; /*리스트 마커 (점) */
-  margin-left: 24px;
-}
-
-.item-details li {
-    margin-bottom: 5px; /* 리스트 항목 간 간격 */
-}
-
-/* 4. 캡션 (Caption) 스타일 */
-.item-caption {
-    font-size: 0.9em; /* 본문보다 작게 */
-    color: #888; /* 가장 연한 색 */
-    margin-top: 15px;
-    padding: 0px 10px;
-    background-color: #f8f9fa; /* 배경색으로 강조 */
-    border-radius: 4px; /* 모서리 둥글게 */
-    display: inline-block; /* 내용만큼만 너비 차지 */
-}
-
-
-
-
-
-
-/* @media (min-width: 1200px) {
+@media (min-width: 1200px) {
   #experience .container {
     width: 860px;
   }
-} */
+}
 
 @media (max-width: 1360px) {
   .card ul li {
@@ -612,7 +602,7 @@ small {
     position: absolute;
   }
   nav a.button-collapse, nav a.button-collapse i {
-    color: #067091;
+    color: #009688;
     height: 56px;
     line-height: 56px;
   }
@@ -664,17 +654,12 @@ small {
 }
 
 @media (max-width: 600px) {
-  h1 {
-    font-size: 35px;
-    line-height: 80%;
-    margin: 30px 0 0;
-  }
   h2 {
     font-size: 22px;
     line-height: 200%;
     margin: 30px 0 0;
   }
-  #intro.section .container *:not(span,h1) {
+  #intro.section .container *:not(span) {
     padding: 0;
   }
   .card .card-content .card-title {
@@ -685,7 +670,6 @@ small {
     text-align: center;
     display: block;
   }
- 
   #experience span.card-title a {
     margin: 0;
   }
