--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,8 @@ ul.side-nav.fixed.table-of-contents li:not(.logo) a span, ul#slide-out li:not(.l
 body {
   color: #333;
   font-size: 18px;
-  font-family: Arial, Helvetica, sans-serif,;
+  font-family: "Nanum Gothic", sans-serif;
+  font-style: normal;
 }
 
 a {
