--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,12 +268,17 @@ a.hoverline:hover {
 
 #skills .col img.responsive-img {
   margin: 0 auto;
-  max-height: 100px;
+  max-height: 50px;
   padding-bottom: 10px;
   text-align: center;
   vertical-align: middle;
   display: table-cell;
 }
+#skills .col{
+  text-align: center;
+  padding-bottom: 20px;
+}
+
 
 .row{
   border-bottom: 1px solid #ddd;
@@ -288,6 +293,49 @@ a.hoverline:hover {
 
 small {
   display: none;
+}
+
+.card {
+  margin-bottom: 60px;
+}
+
+.card .role {
+  font-size: 1.25rem;
+  position: absolute;
+  right: 38px;
+  top: 35px;
+}
+
+.card li a {
+  margin-right: 0;
+  color: #333;
+  border-bottom: 2px solid #ffab40;
+}
+
+.card li a:hover {
+  color: #333;
+  font-weight: 500;
+}
+
+.card .card-content {
+  padding-bottom: 30px;
+}
+
+.card .card-content p {
+  padding: 5px 0 0;
+}
+
+.card h5 {
+  font-size: 1.5rem;
+  margin-bottom: -0.5rem;
+  margin-top: 2rem;
+}
+
+.card h6 {
+  font-weight: 300;
+  letter-spacing: 1px;
+  margin-top: 2rem;
+  text-transform: uppercase;
 }
 
 /* main .teal-text */
@@ -371,8 +419,8 @@ small {
 
 .skill-box li {
   /* font-size: 0.9em; */
-  /* width: 120px;
-  height: 100px; */
+  width: 120px;
+  height: 100px;
   color: #666;
   background-color: #eaeaea;
   border-radius: 5px;
